trying to fetch profile name while encoding .sii files

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -23,8 +23,12 @@
       <button id="scan-profiles-btn" class="primary-btn">Profile suchen</button>
       <p id="profile-status"></p>
       <ul id="profile-list"></ul>
-    </section>
 
+      <h1>Profil Laden</h1>
+      <button id="load-profiles-btn" class="primary-btn">Profile Laden</button>
+      <p id="profile-list"></p>
+
+    </section>
     <!-- Editor -->
     <section class="card">
       <h2>Daten bearbeiten</h2>
