--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SCS Save Editor</title>
   <link rel="stylesheet" href="styles.css" />
-  <script type="module" src="/main.js" defer></script>
+  <script type="module" src="main.js" defer></script>
 </head>
 
 <body>
