added Display Money

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -38,6 +38,10 @@
       <h2>Daten bearbeiten</h2>
 
       <div class="editor-row">
+        <p id="moneyShow">Geld wird geladen...</p>
+      </div>
+
+      <div class="editor-row">
         <input id="money-input" placeholder="Geld eingeben …" />
         <button id="save-money-btn" class="secondary-btn">Speichern</button>
       </div>
