added xp, still not working! Working on it!

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -39,6 +39,11 @@
 
       <div class="editor-row">
         <p id="moneyShow">Geld wird geladen...</p>
+       <!-- <p id="xpShow">Erfahrungspunkte werden geladen...</p> -->
+      </div>
+
+       <div class="editor-row">
+        <p id="xpShow">Erfahrungspunkte werden geladen...</p>
       </div>
 
       <div class="editor-row">
