--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -11,10 +11,11 @@
 <header class="main-header">
     <div class="logo">ETS2 TOOLBOX</div>
     <nav>
-        <button class="nav-btn" data-tab="trailer">Trailer</button>
         <button class="nav-btn" data-tab="truck">Truck</button>
+        <button class="nav-btn" data-tab="trailer">Trailer</button>
         <button class="nav-btn" data-tab="profile">Profile</button>
         <button class="nav-btn" data-tab="settings">Settings</button>
+        <button class="link-btn" data-tab="youtube">YouTube</button> <!--Hier soll mein YT link eingefügt werden -->
     </nav>
 </header>
 
@@ -38,10 +39,10 @@
         <button id="openSaveModal">▼</button>
     </div>
 
-    <button id="refreshBtn" class="refresh-btn">⟳</button>
+    <button id="refreshBtn" class="refresh-btn">⟳</button> <!-- hier muss mein Main.js update button eingepflegt werden -->
 </footer>
 
-<!-- MODAL -->
+<!-- MODAL + Das ist, wenn man auf die Kachel drückt zum öffnen -->
 <div class="modal-backdrop" id="modal">
     <div class="modal-box">
         <h2 id="modalTitle">Modal Title</h2>
@@ -55,5 +56,6 @@
 
 <script src="tools.js"></script>
 <script src="app.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
