--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -54,6 +54,25 @@
     </div>
 </div>
 
+<div class="modal-backdrop" id="modalNumber">
+    <div class="modal-box">
+        <h2 id="modalTitle">Modal Title</h2>
+        <input id="modalInput" type="number" placeholder="">
+        <div class="modal-actions">
+            <button id="modalCancel">Close</button>
+            <button id="modalApply" class="apply">Apply</button>
+        </div>
+    </div>
+</div>
+
+<div class="modal-backdrop" id="modalSlider">
+    <div class="modal-box">
+        <h2 id="modalTitle">Modal Title</h2>
+        <input id="modalInput" type="checkbox">
+        <div class="checkboxSlider"></div>
+    </div>
+</div>
+
 <script src="tools.js"></script>
 <script src="app.js"></script>
 <script src="main.js"></script>
