created Modal options
created Number, Text, Checkbox

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -43,33 +43,35 @@
 </footer>
 
 <!-- MODAL + Das ist, wenn man auf die Kachel drückt zum öffnen -->
-<div class="modal-backdrop" id="modal">
+<div class="modal-backdrop" id="modalText">
     <div class="modal-box">
-        <h2 id="modalTitle">Modal Title</h2>
-        <input id="modalInput" type="text" placeholder="">
+        <h2 id="modalTextTitle">Modal Title</h2>
+        <input id="modalTextInput" type="text" placeholder="">
         <div class="modal-actions">
-            <button id="modalCancel">Close</button>
-            <button id="modalApply" class="apply">Apply</button>
+            <button id="modalTextCancel">Close</button>
+            <button id="modalTextApply" class="apply">Apply</button>
         </div>
     </div>
 </div>
 
 <div class="modal-backdrop" id="modalNumber">
     <div class="modal-box">
-        <h2 id="modalTitle">Modal Title</h2>
-        <input id="modalInput" type="number" placeholder="">
+        <h2 id="modalNumberTitle">Modal Title</h2>
+        <input id="modalNumberInput" type="number" placeholder="">
         <div class="modal-actions">
-            <button id="modalCancel">Close</button>
-            <button id="modalApply" class="apply">Apply</button>
+            <button id="modalNumberCancel">Close</button>
+            <button id="modalNumberApply" class="apply">Apply</button>
         </div>
     </div>
 </div>
 
 <div class="modal-backdrop" id="modalSlider">
     <div class="modal-box">
-        <h2 id="modalTitle">Modal Title</h2>
-        <input id="modalInput" type="checkbox">
-        <div class="checkboxSlider"></div>
+        <h2 id="modalSliderTitle">Modal Title</h2>
+        <input id="modalSliderInput" type="checkbox">
+        <div class="checkboxSlider">
+            <button id="modalSliderCancel">Close</button>
+        </div>
     </div>
 </div>
 
