fixed profile scan button

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -31,8 +31,8 @@
 
     <div class="profile-picker">
         <span id="profileName">Select a profile</span>
-        <button id="openProfileModal">▼</button>
-        <p id="profile-status"></p>
+        <button id="openSaveModal">▼</button>
+            <p id="profile-status"></p>
     </div>
 
     <div class="save-picker">
