--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -85,9 +85,10 @@
         <input id="modalSliderInput" type="checkbox" class="toggle-checkbox">
         <!-- Das Label dient als der visuelle Slider, der über CSS gestylt wird -->
         <label for="modalSliderInput" class="checkboxSlider"></label> 
-        
-        <!-- Ich habe die Buttons hier entfernt, da dein JS keine Logik dafür hatte, 
-             aber du kannst sie bei Bedarf wieder hinzufügen. -->
+        <div class="modal-actions">
+            <button id="modalSliderCancel">Close</button>
+            <button id="modalSliderApply" class="apply">Apply</button>
+        </div>
     </div>
 </div>
 
