added function gameSwitch button
Jetzt kann man auswählen zwischen ETS2 und ATS, aber ATS habe ich erstmal mit disable makiert, so dass jeder weiß, es funktioniert erstmal nur ETS2.
Unteranderem musste ich in der App.js hinterlegen, das es ein addEvent pro Button gibt -> Muss ausgeschmückt werden ncoh.
so dass die unterschiedliche Knöpfe active geschalten werden.

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -32,7 +32,7 @@
 <footer class="profile-bar">
     <div class="game-switch">
         <button id="ets2Btn" class="active">ETS2</button>
-        <button id="atsBtn" class="">ATS</button>
+        <button id="atsBtn" disabled>ATS (Coming Soon)</button>
     </div>
 
     <!-- Die Struktur für das benutzerdefinierte Dropdown-Menü -->
