created structur for setSkillPoints

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -111,7 +111,7 @@
     <!-- MODAL: Multi Input (Dropdown, Slider, Number) -->
     <div class="modal-backdrop" id="modalMulti">
       <div class="modal-box">
-        <h2 id="modalMultiTitle">Modal Title</h2>
+        <h2 id="modalMultiTitle"></h2>
         <div id="modalMultiContent"></div>
         <div class="modal-actions">
           <button id="modalMultiCancel">Close</button>
