Refactor to ES module imports and improve tool actions
Converted script loading to ES module imports, making main.js responsible for importing app.js and tools.js. Exported modal and tool loader functions from app.js, and updated tools.js to use async actions that call these modals and invoke backend changes. Added extensive logging for debugging, improved global function exposure for cross-module access, and enhanced tool actions to update data after changes. Cleaned up index.html script tags to only load main.js as a module.

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -120,11 +120,7 @@
       </div>
     </div>
 
-    <!-- Hier habe ich die Skripte optimiert -->
-    <!-- tools.js und app.js scheinen andere, nicht gezeigte Logik zu enthalten -->
-    <script src="tools.js"></script>
-    <script src="app.js"></script>
-    <!-- main.js (das Skript mit all deiner Logik) als Modul und mit defer laden -->
+    <!-- Nur noch main.js als Modul laden. Es kümmert sich um den Import der anderen Skripte. -->
     <script type="module" src="main.js" defer></script>
   </body>
 </html>
