Integrate tauri-plugin-opener and refactor codebase
Added tauri-plugin-opener as a dependency and initialized it in the Tauri builder. Updated Cargo.toml and capabilities to support the plugin. Refactored and reordered module imports, improved code formatting, and enhanced error handling and logging throughout the Rust backend. Minor model and utility adjustments for consistency.

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -20,7 +20,7 @@
         <button class="nav-btn" data-tab="profile">Profile</button>
         <button class="nav-btn" data-tab="settings">Settings</button>
         <!-- Dein YouTube-Link als Link-Button -->
-        <a href="www.youtube.com" target="_blank" class="link-btn">YouTube</a>
+        <button id="youtubeBtn" class="link-btn">YouTube</button>
       </nav>
     </header>
 
