--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -14,13 +14,15 @@
         <span>SAVE EDITOR FOR SCS - xLieferant</span>
       </div>
       <nav>
-        <button class="nav-btn active" data-tab="truck">Truck</button>
+        <button class="nav-btn" data-tab="truck">Truck</button>
         <!-- "active" Klasse als Standard gesetzt -->
         <button class="nav-btn" data-tab="trailer">Trailer</button>
-        <button class="nav-btn" data-tab="profile">Profile</button>
+        <button class="nav-btn active" data-tab="profile">Profile</button>
         <button class="nav-btn" data-tab="settings">Settings</button>
         <!-- Dein YouTube-Link als Link-Button -->
         <button id="youtubeBtn" class="link-btn">YouTube</button>
+        <button id="patreonBtn" class="link-btn">Patreon</button>
+        
       </nav>
     </header>
 
