--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -20,8 +20,8 @@
         <button class="nav-btn active" data-tab="profile">Profile</button>
         <button class="nav-btn" data-tab="settings">Settings</button>
         <!-- Dein YouTube-Link als Link-Button -->
-        <button id="youtubeBtn" class="link-btn">YouTube</button>
-        <button id="patreonBtn" class="link-btn">Patreon</button>
+        <button id="youtubeBtn" class="nav-action youtube">YouTube</button>
+        <button id="patreonBtn" class="nav-action patreon">Patreon</button>
         
       </nav>
     </header>
