small UI changes

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -71,6 +71,7 @@
       </div>
 
       <button id="refreshBtn" class="refresh-btn">⟳</button>
+      <div class="version-info" style="font-size:0.75em; color:#888; opacity: 0.6; margin-top:5px;">v0.1.0</div>
     </footer>
 
     <!-- MODAL: Text-Input -->
