added icons and info
added Icons to Buttons and put the version Info in another place!

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -15,15 +15,19 @@
       </div>
       <nav class="nav-wrapper">
         <div class="nav-main">
-          <button class="nav-btn" data-tab="truck">Truck</button>
-          <button class="nav-btn" data-tab="trailer">Trailer</button>
-          <button class="nav-btn active" data-tab="profile">Profile</button>
-          <button class="nav-btn" data-tab="settings">Settings</button>
+          <button class="nav-btn" data-tab="truck">🚛Truck</button>
+          <button class="nav-btn" data-tab="trailer">🚚Trailer</button>
+          <button class="nav-btn active" data-tab="profile">💠Profile</button>
+          <button class="nav-btn" data-tab="settings">⚙️Settings</button>
         </div>
 
         <div class="nav-bottom">
           <button id="youtubeBtn" class="nav-action youtube">YouTube</button>
           <button id="patreonBtn" class="nav-action patreon">Patreon</button>
+          <p class="version-info"
+        style="font-size: 0.75em; color: #888; opacity: 0.6; margin-top: 5px">
+        v0.1.0
+      </p>
         </div>
       </nav>
     </header>
@@ -50,7 +54,7 @@
             alt="ats Logo"
             class="switchButtonLogo"
           />
-          <span>ATS (Coming Soon)</span>
+          <span>ATS</span>
         </button>
       </div>
 
@@ -73,12 +77,6 @@
       </div>
 
       <button id="refreshBtn" class="refresh-btn">⟳</button>
-      <div
-        class="version-info"
-        style="font-size: 0.75em; color: #888; opacity: 0.6; margin-top: 5px"
-      >
-        v0.1.0
-      </div>
     </footer>
 
     <!-- MODAL: Text-Input -->
