--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -10,8 +10,11 @@
   <body>
     <header class="main-header">
       <div class="logo">
-        <img src="images/xlLogo.png" alt="ets2Logo" sizes="15px" />
-        <span>SAVE EDITOR FOR SCS - xLieferant</span>
+        <img src="images/xlLogo.png" alt="ets2Logo" />
+          <div class="logo-text">
+            <span class="logo-title">SAVE EDITOR</span>
+            <span class="logo-subtitle">for SCS - xLieferant</span>
+          </div>
       </div>
       <nav class="nav-wrapper">
         <div class="nav-main">
