added GitHub Button / Link
added a function to open GitHub via the App!

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -27,6 +27,7 @@
         <div class="nav-bottom">
           <button id="youtubeBtn" class="nav-action youtube">YouTube</button>
           <button id="patreonBtn" class="nav-action patreon">Patreon</button>
+          <button id="githubBtn" class="nav-action github">GitHub</button>
           <p class="version-info"
         style="font-size: 0.75em; color: #888; opacity: 0.6; margin-top: 5px">
         v0.1.1
