--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -31,6 +31,7 @@
           <p class="version-info"
         style="font-size: 0.75em; color: #888; opacity: 0.6; margin-top: 5px">
         v0.1.1
+        <button id="checkUpdateBtn" style="font-size:0.7em; margin-left:5px; cursor:pointer;">Nach Update suchen</button>
       </p>
         </div>
       </nav>
