--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -11,10 +11,10 @@
     <header class="main-header">
       <div class="logo">
         <img src="images/xlLogo.png" alt="ets2Logo" />
-          <div class="logo-text">
-            <span class="logo-title">SAVE EDITOR</span>
-            <span class="logo-subtitle">for SCS - xLieferant</span>
-          </div>
+        <div class="logo-text">
+          <span class="logo-title">SAVE EDITOR</span>
+          <span class="logo-subtitle">for SCS - xLieferant</span>
+        </div>
       </div>
       <nav class="nav-wrapper">
         <div class="nav-main">
@@ -22,17 +22,24 @@
           <button class="nav-btn" data-tab="trailer">🚚Trailer</button>
           <button class="nav-btn active" data-tab="profile">💠Profile</button>
           <button class="nav-btn" data-tab="settings">⚙️Settings</button>
+          <div id="updateStatus" class="update-status"></div>
+          <button id="checkUpdateBtn" style="font-size:0.7em; margin-left:5px; cursor:pointer;">Nach Update suchen</button>
         </div>
 
         <div class="nav-bottom">
           <button id="youtubeBtn" class="nav-action youtube">🔴YouTube</button>
           <button id="patreonBtn" class="nav-action patreon">⚠️Patreon</button>
           <button id="githubBtn" class="nav-action github">⚠️GitHub</button>
-          <p class="version-info"
-        style="font-size: 0.75em; color: #888; opacity: 0.6; margin-top: 5px">
-        v0.1.1
-        <button id="checkUpdateBtn" style="font-size:0.7em; margin-left:5px; cursor:pointer;">Nach Update suchen</button>
-      </p>
+          <p
+            class="version-info"
+            style="
+              font-size: 0.75em;
+              color: #888;
+              opacity: 0.6;
+              margin-top: 5px;
+            ">
+            v0.1.1
+          </p>
         </div>
       </nav>
     </header>
