Redesign toast notifications and version button UI
Replaces the plain version info with a styled version button and updates the update check trigger. Refactors toast notifications to include icons, improved styling, and animation. Adds a semantic version comparison for update checks and modernizes the toast CSS for better appearance and feedback.

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -23,23 +23,13 @@
           <button class="nav-btn active" data-tab="profile">💠Profile</button>
           <button class="nav-btn" data-tab="settings">⚙️Settings</button>
           <div id="updateStatus" class="update-status"></div>
-          <button id="checkUpdateBtn" style="font-size:0.7em; margin-left:5px; cursor:pointer;">Nach Update suchen</button>
         </div>
 
         <div class="nav-bottom">
-          <button id="youtubeBtn" class="nav-action youtube">🔴YouTube</button>
-          <button id="patreonBtn" class="nav-action patreon">⚠️Patreon</button>
-          <button id="githubBtn" class="nav-action github">⚠️GitHub</button>
-          <p
-            class="version-info"
-            style="
-              font-size: 0.75em;
-              color: #888;
-              opacity: 0.6;
-              margin-top: 5px;
-            ">
-            v0.1.1
-          </p>
+          <button id="youtubeBtn" class="nav-action youtube">🔴 YouTube</button>
+          <button id="patreonBtn" class="nav-action patreon">⚠️ Patreon</button>
+          <button id="githubBtn" class="nav-action github">⚠️ GitHub</button>
+          <button id="versionBtn" class="version-btn">v0.1.1</button>
         </div>
       </nav>
     </header>
