--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -71,11 +71,10 @@
       </div>
 
       <div class="save-picker">
-        <span id="saveName">
-          Select a save <br class="info" />
-          <span class="status-message">Coming Soon!</span>
-        </span>
-        <button id="openSaveModal" disabled>▼</button>
+        <span id="saveName">Select a save</span>
+        <button id="openSaveModal">▼</button>
+
+        <div id="saveDropdownList" class="dropdown-list"></div>
       </div>
 
       <button id="refreshBtn" class="refresh-btn">⟳</button>
