feat: Add profile cloning with UI and validation
- Added Clone Profile button and modal to frontend
- Implemented live validation for new profile names
- Updated backend to handle encrypted profile.sii during cloning
- Added text_to_hex helper for folder naming"

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -77,6 +77,7 @@
         <div id="saveDropdownList" class="dropdown-list"></div>
       </div>
 
+      <button id="cloneProfileBtn" class="refresh-btn" title="Clone Profile" style="margin-right: 5px;">👯</button>
       <button id="refreshBtn" class="refresh-btn">⟳</button>
     </footer>
 
@@ -125,6 +126,36 @@
         <div class="modal-actions">
           <button id="modalMultiCancel">Close</button>
           <button id="modalMultiApply" class="apply">Apply</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- MODAL: Clone Profile -->
+    <div class="modal-backdrop" id="modalClone">
+      <div class="modal-box">
+        <h2>Clone Profile</h2>
+        <p id="cloneSourceDisplay" style="font-size: 0.9em; color: #aaa; margin-bottom: 15px;"></p>
+        
+        <div style="margin-bottom: 15px;">
+            <input id="cloneNameInput" type="text" placeholder="New Profile Name" style="width: 100%; padding: 8px; box-sizing: border-box;" />
+            <div id="cloneValidationMsg" style="font-size: 0.8em; min-height: 1.2em; margin-top: 5px; text-align: left;"></div>
+        </div>
+
+        <div class="clone-options" style="text-align: left; display: flex; flex-direction: column; gap: 8px; margin-bottom: 20px;">
+            <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
+                <input type="checkbox" id="cloneBackup" checked> <span>Create Backup of Source (.zip)</span>
+            </label>
+            <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
+                <input type="checkbox" id="cloneReplaceHex" checked> <span>Replace Hex Identifiers (Recommended)</span>
+            </label>
+            <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
+                <input type="checkbox" id="cloneReplaceText" checked> <span>Replace Text Names</span>
+            </label>
+        </div>
+
+        <div class="modal-actions">
+          <button id="modalCloneCancel">Cancel</button>
+          <button id="modalCloneApply" class="apply" disabled>Clone</button>
         </div>
       </div>
     </div>
