--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -45,6 +45,14 @@
     ></p>
 
     <footer class="profile-bar">
+      <div class="profileBurger">
+        <button id="profileBurgerBtn">
+          <span>
+            🗂️
+          </span>
+        </button>
+      </div>
+
       <div class="game-switch">
         <button id="ets2Btn" class="active">
           <img src="images/ets2_32x32.png" alt="ets2Logo" sizes="15px" />
